# ChangeLog for virtual/perl-ExtUtils-Constant
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-Constant/ChangeLog,v 1.1 2012/06/16 20:09:48 tove Exp $

  16 Jun 2012; Torsten Veller <tove@gentoo.org>
  +perl-ExtUtils-Constant-0.230.0-r2.ebuild, +metadata.xml:
  Import from ::perl-experimental

*perl-ExtUtils-Constant-0.230.0-r2 (06 Dec 2011)
*perl-ExtUtils-Constant-0.220.0-r1 (06 Dec 2011)

  06 Dec 2011; Kent Fredric <kentfredric@gmail.com>
  -perl-ExtUtils-Constant-0.220.0.ebuild,
  +perl-ExtUtils-Constant-0.220.0-r1.ebuild,
  -perl-ExtUtils-Constant-0.230.0-r1.ebuild,
  +perl-ExtUtils-Constant-0.230.0-r2.ebuild:
  Fix deps to align to perl versions in virtual/perl-ExtUtils-Constant

*perl-ExtUtils-Constant-0.230.0-r1 (17 Jun 2011)

  17 Jun 2011; Kent Fredric <kentfredric@gmail.com>
  -perl-ExtUtils-Constant-0.230.0.ebuild,
  +perl-ExtUtils-Constant-0.230.0-r1.ebuild:
  Update for perl-5.14.1 with star-match

  24 May 2011; Kent Fredric <kentfredric@gmail.com>
  perl-ExtUtils-Constant-0.230.0.ebuild:
  Remove _rc1 references and fix to be 5.14.0 friendly

  20 Apr 2011; Kent Fredric <kentfredric@gmail.com>
  perl-ExtUtils-Constant-0.230.0.ebuild:
  Add 5.14

*perl-ExtUtils-Constant-0.230.0 (03 Apr 2011)
*perl-ExtUtils-Constant-0.220.0 (03 Apr 2011)

  03 Apr 2011; Kent Fredric <kentfredric@gmail.com>
  +perl-ExtUtils-Constant-0.220.0.ebuild,
  +perl-ExtUtils-Constant-0.230.0.ebuild, +metadata.xml:
  Added
