@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-ExtUtils-Constant
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-Constant/ChangeLog,v 1.1 2012/06/16 20:09:48 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-Constant/ChangeLog,v 1.2 2012/07/14 19:43:50 ulm Exp $
+
+  14 Jul 2012; Ulrich Müller <ulm@gentoo.org>
+  perl-ExtUtils-Constant-0.230.0-r2.ebuild:
+  QA: Define mandatory ebuild variables, bug 425848.
 
   16 Jun 2012; Torsten Veller <tove@gentoo.org>
   +perl-ExtUtils-Constant-0.230.0-r2.ebuild, +metadata.xml:
